[package]
name = "wgpufrac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = {version = "1.14.0", features = ["derive"]}
clap = { version = "4.4.12", features = ["derive"] }
futures-intrusive = "0.5.0"
image = "0.24.8"
pollster = "0.3.0"
shaderc = "0.8.3"
wgpu = { version = "0.18.0" }
